# gigabyte-cc

./: .gitignore  .prettierignore  .prettierrc  LICENSE.md  README.md  components.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  fmt-backend.yml  fmt-frontend.yml  lint-backend.yml  lint-frontend.yml  release.yml
aorus-helper/: Cargo.toml
aorus-helper/src/: main.rs
polkit-policy/: com.aorus.controlcenter.policy
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ErrorBoundary.tsx  FanControlTab.tsx  FanCurveTab.tsx  PerformanceTab.tsx  PermissionsWarning.tsx  PowerManagementTab.tsx  SystemInfoTab.tsx
src/components/ui/: button.tsx  input.tsx  label.tsx  select.tsx  slider.tsx
src/lib/: hooks.ts  tauri.ts  theme-provider.tsx  toast-provider.tsx  types.ts
