[package]
name = "gigabyte-cc"
version = "0.1.0"
description = "A simple GUI app for controlling Gigabyte laptops' features"
authors = ["jokelbaf"]
edition = "2024"

[lib]
name = "gigabyte_cc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.9.1", features = [] }
tauri-plugin-opener = "2.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process"] }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-opener = "2.5.0"
